--- a/hospital/templates/viewstaff.html
+++ b/hospital/templates/viewstaff.html
@@ -14,6 +14,7 @@
             <th>LastName</th>
             <th>UserName</th>
             <th>Email</th>
+            <th>Category</th>
             <th>Phone</th>
             <th>Fess</th>
             <th>Illness</th>
@@ -30,6 +31,7 @@
                 <td>{{i_staff.last_name}}</td>
                 <td>{{i_staff.username}}</td>
                 <td>{{i_staff.email}}</td>
+                <td>{{i_staff.staff_category}}</td>
                 <td>{{i_staff.phone}}</td>
                 <td>{{i_staff.fess}}</td>
                 <td>{{i_staff.lillness.lillne_name}}</td>
