--- a/hospital/templates/Medicines/add_medicine.html
+++ b/hospital/templates/Medicines/add_medicine.html
@@ -33,7 +33,8 @@
             </div>
         </div>
         <div class="form-footer">
-            <input type="submit" name="{% if medicines_data %}Update_Medicines{% else %}Add_Medicines{% endif %}" value="{% if medicines_data %}Update Medicines{% else %}Add Medicines{% endif %}">
+            <input type="submit"     onclick="return confirm('Are you sure you want to add medicine?')"
+ name="{% if medicines_data %}Update_Medicines{% else %}Add_Medicines{% endif %}" value="{% if medicines_data %}Update Medicines{% else %}Add Medicines{% endif %}">
         </div>
     </form>
 </div>
