--- a/hospital/templates/adddoctor.html
+++ b/hospital/templates/adddoctor.html
@@ -40,8 +40,18 @@
                                 <option value="{{i_illness.lillne_name}}" {% if i_illness.lillne_id == doc_data.lillness.lillne_id %}selected{% endif %}>{{i_illness.lillne_name}}</option>
                             {% endfor %}
                         </select>
-                    </div> 
-                </div>                
+                    </div>
+                    <div class="d-flex  flex-column w-50">
+                        <label>Select Type :</label>
+                        <select name="doctor_category" required>
+                            <option value="" disabled selected>Select your category</option>
+                            <option>Mbbs</option>
+                            <option>Md</option>
+                            <option>Surgeon</option>
+                        </select>
+                    </div>
+
+                </div>
                 <div class="row">
                     {% if doc_data %}
                     <div class="row w-50">
@@ -76,7 +86,7 @@
               </div>
               <div class="rule"></div>
               <div class="form-footer">
-                <input type="submit" name="{% if doc_data %}update_doctor{% else %}add_doctor{% endif %}" value="{% if doc_data %}update_doctor{% else %}add_doctor{% endif %}">
+                <input type="submit" onclick="return confirm('Are you sure you want to add Doctor?')" name="{% if doc_data %}update_doctor{% else %}add_doctor{% endif %}" value="{% if doc_data %}update_doctor{% else %}add_doctor{% endif %}">
               </div>
             </form>
         </div>
