--- a/hospital/templates/addlillnes.html
+++ b/hospital/templates/addlillnes.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="form-footer">
-                    <input type="submit"  name="{% if illness_data %}update_illnes{% else %}add_illnes{% endif %}" value="{% if illness_data %}update_illnes{% else %}add_illnes{% endif %}">
+                    <input type="submit" onclick="return confirm('Are you sure you want to add Illness?')"  name="{% if illness_data %}update_illnes{% else %}add_illnes{% endif %}" value="{% if illness_data %}update_illnes{% else %}add_illnes{% endif %}">
                 </div>
             </form>
         </div>
