--- a/hospital/templates/viewdoctor.html
+++ b/hospital/templates/viewdoctor.html
@@ -16,6 +16,7 @@
                 <th>Phone</th>
                 <th>Illness</th>
                 <th>Fess</th>
+                <th>Category</th>
                 <th>Update</th>
                 <th>Delete</th>
             </thead>
@@ -32,6 +33,7 @@
                         <td>{{i_doctor.phone}}</td>
                         <td>{{i_doctor.lillness.lillne_name}}</td>
                         <td>{{i_doctor.fess}}</td>
+                        <td>{{i_doctor.doctor_category}}</td>
                         <td><a class="text-decoration-none text-dark font-weight-bold" href="update/{{i_doctor.id}}">{% if i_doctor.is_active == False %}<i class="fa fa-unlock-alt p-3" aria-hidden="true"></i>{%else%}<i class="fa fa-pencil p-3" aria-hidden="true"></i>{%endif%}</a></td>
                         <td><a class="text-decoration-none text-dark font-weight-bold" href="delete/{{i_doctor.id}}"><i class="fa fa-trash-o p-3" aria-hidden="true"></i></a></td>
                     </tr>
