--- a/hospital/templates/login.html
+++ b/hospital/templates/login.html
@@ -1,5 +1,52 @@
 {% load static %}
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Animated Login Form</title>
+	<link rel="stylesheet" type="text/css" href="{% static '/lps/css/style.css'%}">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<img class="wave" src="{%static '/lps/img/wave.png'%}">
+	<div class="container">
+		<div class="img">
+			<img src="{%static 'lps/img/bg.svg'%}">
+		</div>
+		<div class="login-content">
+			<form action="" method="POST">
+                {% csrf_token %}
+                <img src="{%static 'lps/img/avatar.svg'%}">
+				<h2 class="title">Welcome</h2>
+           		<div class="input-div one">
+           		   <div class="i">
+           		   		<i class="fas fa-user"></i>
+           		   </div>
+           		   <div class="div">
+           		   		<h5>Username</h5>
+           		   		<input type="text" class="input" name="username">
+           		   </div>
+           		</div>
+           		<div class="input-div pass">
+           		   <div class="i"> 
+           		    	<i class="fas fa-lock"></i>
+           		   </div>
+           		   <div class="div">
+           		    	<h5>Password</h5>
+           		    	<input type="password" class="input" name="password">
+            	   </div>
+            	</div>
+            	<a href="#">Forgot Password?</a>
+            	<input type="submit" class="btn" value="Login" name="Login">
+            </form>
+        </div>
+    </div>
+    <script type="text/javascript" src="{%static 'lps/js/main.js'%}"></script>
+</body>
+</html>
+
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,4 +84,4 @@
         </form>
     </div>
 </body>
-</html>
+</html> {% endcomment %}
